--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><img class="check" src="Assets/img/Checkmark.svg" alt=""><p>Leave reviews and experiences.</p></li>
                     <li><img class="check" src="Assets/img/Checkmark.svg" alt=""><p>See locations for all camps.</p></li>
                 </ul>
-                <a class="boton" href="#">View Campgrounds</a>
+                <a class="boton" href="search.html">View Campgrounds</a>
             </div>
             <div class="content-par">
                 <h4 class="titulo-part">Partnered with:</h4>
