--- a/search.html
+++ b/search.html
@@ -71,42 +71,42 @@
                 <img src="Assets/img/Camp/Compressed/Mount Ulap.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
             <fieldset class="card">
                 <img src="Assets/img/Camp/Compressed/Calaguas Island.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
             <fieldset class="card">
                 <img src="Assets/img/Camp/Compressed/Onay Beach.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
             <fieldset class="card">
                 <img src="Assets/img/Camp/Compressed/Seven Sisters Waterfall.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
             <fieldset class="card">
                 <img src="Assets/img/Camp/Compressed/Latik Riverside.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
             <fieldset class="card">
                 <img src="Assets/img/Camp/Compressed/Buloy Springs.jpg" alt="">
                 <h3>Mount Ulap</h3>
                 <p>One of the most famous hikes in beguet is Mt Ulap in Itogon.</p>
-                <button class="boton-blanco">View Campground</button>
+                <button class="boton-blanco"><a href="detail.html" class="boton">View Campground</a> </button>
             </fieldset>
 
         </section>
