--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
         <nav>
             <section class="contenedor-logo">
                 <img class="logo" src="Assets/img/Logo.svg" alt="">
-                <a href="#" class="ipad-pc a gray">Home</a>
+                <a href="index.html" class="ipad-pc a gray">Home</a>
             </section>
 
             <section class="tel">
@@ -41,7 +41,7 @@
 
     <div id="menu" class="hidden">
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Login</a></li>
             <li><a href="#">Create an account</a></li>
         </ul>
