--- a/add.html
+++ b/add.html
@@ -11,6 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Assets/img/Logo.svg"> 
     <title>YelpCamp</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BE49HLTLDN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BE49HLTLDN');
+</script>
 </head>
 <body>
     <header>
