--- a/detail.html
+++ b/detail.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Assets/img/Logo.svg"> 
     <link rel="stylesheet" href="Assets/css/search.css">
-    <link rel="stylesheet" href="Assets/css/detail.css">
+    <link rel="stylesheet" href="Assets/css/detail.css"> 
     <title>YelpCamp</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BE49HLTLDN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BE49HLTLDN');
+</script>
+   
 </head>
 <body>
     <header>
