--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Assets/img/Logo.svg"> 
+    <link rel="shortcut icon" href="Assets/img/Logo.svg">   
     <title>YelpCamp</title>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BE49HLTLDN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BE49HLTLDN');
+    </script>
+  
 </head>
 <body>
 
